--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 /[Mm]emoryCaptures/
 /[Uu]ser[Ss]ettings/
 
+/.idea/
+
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
