--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,8 @@
     "com.unity.ide.rider": "3.0.16",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.multiplayer.tools": "1.1.0",
+    "com.unity.netcode.gameobjects": "1.1.0",
     "com.unity.probuilder": "5.0.6",
     "com.unity.services.authentication": "1.0.0-pre.4",
     "com.unity.test-framework": "1.1.31",
